Changed roxygen import line for  functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(callBoundaries)
 export(createDCSexp)
 export(createDCSsmp)
 export(diagNormalize)
+export(expApply)
+export(expandExp)
 export(filterLFC)
 export(plotHicSignal)
 export(plotHicStat)
@@ -40,6 +42,8 @@ exportClasses(DCSchr)
 exportClasses(DCSexp)
 exportClasses(FSchr)
 exportClasses(FSexp)
+import(doMC)
+import(foreach)
 import(ggplot2)
 importClassesFrom(Matrix,dtCMatrix)
 importFrom(Matrix,summary)
